docs: uniformize the header and footer lines in man pages
Use dates without the day, use the full month name, put "util-linux" in
the lower left corner, and "User Commands" or "System Administration"
at the top center.

Also improve here and there the one-line program description.

Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/disk-utils/elvtune.8
+++ b/disk-utils/elvtune.8
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH ELVTUNE 8 "14 March 2000" "Version 1.0"
+.TH ELVTUNE 8 "March 2000" "util-linux" "System Administration"
 .SH NAME
 elvtune \- I/O elevator tuner
 .SH SYNOPSIS
