--- a/disk-utils/fdformat.8
+++ b/disk-utils/fdformat.8
@@ -1,8 +1,8 @@
 .\" Copyright 1992, 1993 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be distributed under the GNU General Public License
-.TH FDFORMAT "8" "July 2011" "util-linux" "System Administration Utilities"
+.TH FDFORMAT 8 "July 2011" "util-linux" "System Administration"
 .SH NAME
-fdformat \- Low-level formats a floppy disk
+fdformat \- low-level format a floppy disk
 .SH SYNOPSIS
 .B fdformat
 [\fIoptions\fR] \fIdevice\fR
