--- a/disk-utils/fsck.minix.8
+++ b/disk-utils/fsck.minix.8
@@ -1,9 +1,9 @@
 .\" Copyright 1992, 1993, 1994 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be freely distributed.
 .\" " for hilit19
-.TH FSCK 8 "2 July 1996" "Util-Linux 2.6" "Linux Programmer's Manual"
+.TH FSCK 8 "July 1996" "util-linux" "System Administration"
 .SH NAME
-fsck.minix \- a file system consistency checker for Linux
+fsck.minix \- check consistency of Minix filesystem
 .SH SYNOPSIS
 .B fsck.minix
 .RB [ \-larvsmf ]
