--- a/disk-utils/isosize.8
+++ b/disk-utils/isosize.8
@@ -1,6 +1,6 @@
-.TH ISOSIZE "8" "June 2011" "util-linux" "System Administration Utilities"
+.TH ISOSIZE 8 "June 2011" "util-linux" "System Administration"
 .SH NAME
-isosize \- outputs the length of an iso9660 filesystem
+isosize \- output the length of an iso9660 filesystem
 .SH SYNOPSIS
 .B isosize
 [\fIoptions\fR] \fIiso9660_image_file\fR
