--- a/disk-utils/mkfs.8
+++ b/disk-utils/mkfs.8
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH MKFS "8" "June 2011" "util-linux" "System Administration Utilities"
+.TH MKFS 8 "June 2011" "util-linux" "System Administration"
 .SH NAME
 mkfs \- build a Linux filesystem
 .SH SYNOPSIS
