--- a/disk-utils/mkfs.minix.8
+++ b/disk-utils/mkfs.minix.8
@@ -1,8 +1,8 @@
 .\" Copyright 1992, 1993, 1994 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be freely distributed.
-.TH MKFS.MINIX 8 "2 July 1996" "Util-linux 2.6" "Linux System Administrator's Manual"
+.TH MKFS.MINIX 8 "June 2011" "util-linux" "System Administration"
 .SH NAME
-mkfs.minix \- make a Linux MINIX filesystem
+mkfs.minix \- make a Minix filesystem
 .SH SYNOPSIS
 .B mkfs.minix
 .RB [ \-c | \-l
