--- a/disk-utils/raw.8
+++ b/disk-utils/raw.8
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH RAW 8 "Aug 1999" "Version 0.1"
+.TH RAW 8 "August 1999" "util-linux" "System Administration"
 .SH NAME
 raw \- bind a Linux raw character device
 .SH SYNOPSIS
