--- a/disk-utils/swaplabel.8
+++ b/disk-utils/swaplabel.8
@@ -2,9 +2,9 @@
 .\"
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
-.TH SWAPLABEL 8 "2 April 2010" "Linux" "Linux Programmer's Manual"
+.TH SWAPLABEL 8 "April 2010" "util-linux" "System Administration"
 .SH NAME
-swaplabel \- Print or change the label / UUID of a swap area
+swaplabel \- print or change the label or UUID of a swap area
 .SH SYNOPSIS
 .B swaplabel
 .RB [ \-L
@@ -14,7 +14,7 @@ swaplabel \- Print or change the label / UUID of a swap area
 .I device
 .SH DESCRIPTION
 .B swaplabel
-will display or change the label / UUID of a swap partition located on
+will display or change the label or UUID of a swap partition located on
 .IR device 
 (or regular file).
 .PP
