--- a/fdisk/cfdisk.8
+++ b/fdisk/cfdisk.8
@@ -11,9 +11,9 @@
 .\" permission notice identical to this one.
 .\"
 .\" " for hilit mode
-.TH CFDISK 8 "3 June 1995" "The BOGUS Linux Release" "Linux Programmer's Manual"
+.TH CFDISK 8 "July 2009" "util-linux" "System Administration"
 .SH NAME
-cfdisk \- Curses based disk partition table manipulator for Linux
+cfdisk \- display or manipulate disk partition table
 .SH SYNOPSIS
 .B cfdisk
 .RB [ \-agvz ]
@@ -28,7 +28,7 @@ cfdisk \- Curses based disk partition table manipulator for Linux
 .RI [ device ]
 .SH DESCRIPTION
 .B cfdisk
-is a curses based program for partitioning any hard disk drive.
+is a curses-based program for partitioning any hard disk drive.
 Typical values of the
 .I device
 argument are:
