--- a/fsck/fsck.8
+++ b/fsck/fsck.8
@@ -2,7 +2,7 @@
 .\" Copyright 1993, 1994, 1995 by Theodore Ts'o.  All Rights Reserved.
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
-.TH FSCK 8 "February 2009" "Linux" "MAINTENANCE COMMANDS"
+.TH FSCK 8 "February 2009" "util-linux" "System Administration"
 .SH NAME
 fsck \- check and repair a Linux filesystem
 .SH SYNOPSIS
