--- a/hwclock/hwclock.8
+++ b/hwclock/hwclock.8
@@ -1,4 +1,4 @@
-.TH HWCLOCK 8 "August 2011"
+.TH HWCLOCK 8 "August 2011" "util-linux" "System Administration"
 .SH NAME
 hwclock \- query or set the hardware clock (RTC)
 .SH SYNOPSIS
