--- a/login-utils/chfn.1
+++ b/login-utils/chfn.1
@@ -10,7 +10,7 @@
 .\"  $Revision: 1.1 $
 .\"  $Date: 1995/03/12 01:29:16 $
 .\"
-.TH CHFN 1 "October 13 1994" "chfn" "Linux Reference Manual"
+.TH CHFN 1 "July 2009" "util-linux" "User Commands"
 .SH NAME
 chfn \- change your finger information
 .SH SYNOPSIS
