--- a/login-utils/last.1
+++ b/login-utils/last.1
@@ -1,4 +1,4 @@
-.TH LAST 1 "20 March 1992"
+.TH LAST 1 "March 1992" "util-linux" "User Commands"
 .SH NAME
 last \(em indicate last logins by user or terminal
 .SH SYNOPSIS
