--- a/login-utils/login.1
+++ b/login-utils/login.1
@@ -1,6 +1,6 @@
 .\" Copyright 1993 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be distributed under the GNU General Public License
-.TH LOGIN 1 "4 November 1996" "Util-linux 1.6" "Linux Programmer's Manual"
+.TH LOGIN 1 "March 2009" "util-linux" "User Commands"
 .SH NAME
 login \- sign on
 .SH SYNOPSIS
