--- a/misc-utils/blkid.8
+++ b/misc-utils/blkid.8
@@ -5,7 +5,7 @@
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
 .\" Based on uuidgen, Mon Sep 17 10:42:12 2000, Andreas Dilger
-.TH BLKID 8 "February 2011" "Linux" "MAINTENANCE COMMANDS"
+.TH BLKID 8 "February 2011" "util-linux" "System Administration"
 .SH NAME
 blkid \- locate/print block device attributes
 .SH SYNOPSIS
