--- a/misc-utils/cal.1
+++ b/misc-utils/cal.1
@@ -34,14 +34,15 @@
 .\"
 .\"     @(#)cal.1	8.1 (Berkeley) 6/6/93
 .\"
-.TH CAL "1" "June 2011" "util-linux" "User Commands"
+.TH CAL 1 "June 2011" "util-linux" "User Commands"
 .SH NAME
-cal \- displays a calendar
+cal \- display a calendar
 .SH SYNOPSIS
 .B cal
 [\fIoptions\fR] [[[\fIday\fR] \fImonth\fR] \fIyear\fR]
 .SH DESCRIPTION
-Cal displays a simple calendar. If arguments are not specified, the current
+.B cal
+displays a simple calendar.  If no arguments are specified, the current
 month is displayed.
 .SH OPTIONS
 .TP
