--- a/misc-utils/ddate.1
+++ b/misc-utils/ddate.1
@@ -1,8 +1,8 @@
 .\" All Rites Reversed.  This file is in the PUBLIC DOMAIN.
 .\" Kallisti.
-.TH DDATE 1 "59 Bureaucracy 3161" "" "Emperor Norton Utilities"
+.TH DDATE 1 "Bureaucracy 3161" "util-linux" "Emperor Norton User Command"
 .SH NAME
-ddate \- converts Gregorian dates to Discordian dates
+ddate \- convert Gregorian dates to Discordian dates
 .SH SYNOPSIS
 .B ddate
 .RI [ \fB+\fPformat]
