--- a/misc-utils/logger.1
+++ b/misc-utils/logger.1
@@ -33,9 +33,9 @@
 .\"
 .\" Section on valid facility and level strings added by
 .\" and1000@debian.org, 26 Oct 1997.
-.Dd June 6, 1993
+.Dd August 2011
 .Dt LOGGER 1
-.Os BSD 4.3
+.Os util-linux
 .Sh NAME
 .Nm logger
 .Nd a shell command interface to the syslog(3) system log module
