--- a/misc-utils/namei.1
+++ b/misc-utils/namei.1
@@ -1,9 +1,9 @@
 .\"
 .\" Version 1.4 of namei
 .\"
-.TH NAMEI 1 "Local"
+.TH NAMEI 1 "June 2011" "util-linux" "User Commands"
 .SH NAME
-namei - follow a pathname until a terminal point is found
+namei \- follow a pathname until a terminal point is found
 .SH SYNOPSIS
 .B namei
 .RI [ options ]
