--- a/misc-utils/rename.1
+++ b/misc-utils/rename.1
@@ -1,7 +1,7 @@
 .\" Written by Andries E. Brouwer (aeb@cwi.nl)
 .\" Placed in the public domain
 .\"
-.TH RENAME "1" "June 2011" "util-linux" "User Commands"
+.TH RENAME 1 "June 2011" "util-linux" "User Commands"
 .SH NAME
 rename \- rename files
 .SH SYNOPSIS
