--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -2,7 +2,7 @@
 .\" Copyright 2007 by Theodore Ts'o.  All Rights Reserved.
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
-.TH UUIDD "8" "June 2011" "util-linux" "System Administration Utilities"
+.TH UUIDD 8 "June 2011" "util-linux" "System Administration"
 .SH NAME
 uuidd \- UUID generation daemon
 .SH SYNOPSIS
