--- a/misc-utils/uuidgen.1
+++ b/misc-utils/uuidgen.1
@@ -5,9 +5,9 @@
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
 .\" Created  Wed Mar 10 17:42:12 1999, Andreas Dilger
-.TH UUIDGEN "1" "June 2011" "util-linux" "User Commands"
+.TH UUIDGEN 1 "June 2011" "util-linux" "User Commands"
 .SH NAME
-uuidgen \- command\-line utility to create a new UUID value
+uuidgen \- create a new UUID value
 .SH SYNOPSIS
 .B uuidgen
 [\fIoptions\fR]
