--- a/misc-utils/wipefs.8
+++ b/misc-utils/wipefs.8
@@ -2,7 +2,7 @@
 .\" Copyright 2009 by Karel Zak.  All Rights Reserved.
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
-.TH WIPEFS 8 "October 2009" "Linux" "MAINTENANCE COMMANDS"
+.TH WIPEFS 8 "October 2009" "util-linux" "System Administration"
 .SH NAME
 wipefs \- wipe a filesystem signature from a device
 .SH SYNOPSIS
