--- a/mount/mount.8
+++ b/mount/mount.8
@@ -39,7 +39,7 @@
 .\" 010725, Nikita Danilov <NikitaDanilov@Yahoo.COM>: reiserfs options
 .\" 011124, Karl Eichwalder <ke@gnu.franken.de>: tmpfs options
 .\"
-.TH MOUNT 8 "2004-12-16" "Linux 2.6" "Linux Programmer's Manual"
+.TH MOUNT 8 "December 2004" "util-linux" "System Administration"
 .SH NAME
 mount \- mount a filesystem
 .SH SYNOPSIS
