--- a/mount/umount.8
+++ b/mount/umount.8
@@ -23,7 +23,7 @@
 .\" Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139,
 .\" USA.
 .\"
-.TH UMOUNT 8 "26 July 1997" "Linux 2.0" "Linux Programmer's Manual"
+.TH UMOUNT 8 "March 2010" "util-linux" "System Administration"
 .SH NAME
 umount \- unmount file systems
 .SH SYNOPSIS
