--- a/schedutils/ionice.1
+++ b/schedutils/ionice.1
@@ -1,6 +1,6 @@
-.TH IONICE "1" "July 2011" "util-linux" "User Commands"
+.TH IONICE 1 "July 2011" "util-linux" "User Commands"
 .SH NAME
-ionice \- sets or gets process I/O scheduling class and priority
+ionice \- set or get process I/O scheduling class and priority
 .SH SYNOPSIS
 .B ionice
 [[ \fB\-c\fR
