--- a/schedutils/taskset.1
+++ b/schedutils/taskset.1
@@ -25,7 +25,7 @@
 .\" 2002-05-11 Robert Love <rml@tech9.net>
 .\" 	Initial version
 .\"
-.TH TASKSET "1" "Apr 2003" "schedutils" "Linux User's Manual"
+.TH TASKSET 1 "April 2003" "util-linux" "User Commands"
 .SH NAME
 taskset \- retrieve or set a process's CPU affinity
 .SH SYNOPSIS
@@ -39,7 +39,7 @@ taskset \- retrieve or set a process's CPU affinity
 .RI [ mask ]\  pid
 .SH DESCRIPTION
 .PP
-.BR taskset
+.B taskset
 is used to set or retrieve the CPU affinity of a running process given its PID
 or to launch a new COMMAND with a given CPU affinity.  CPU affinity is a
 scheduler property that "bonds" a process to a given set of CPUs on the system.
