--- a/sys-utils/arch.1
+++ b/sys-utils/arch.1
@@ -1,18 +1,18 @@
 .\" arch.1 -- 
 .\" Copyright 1993 Rickard E. Faith (faith@cs.unc.edu)
 .\" Public domain: may be freely distributed.
-.TH ARCH 1 "4 July 1997" "Linux 2.0" "Linux Programmer's Manual"
+.TH ARCH 1 "July 1997" "util-linux" "User Commands"
 .SH NAME
 arch \- print machine architecture
 .SH SYNOPSIS
 .B arch
 .SH DESCRIPTION
 .B arch
-is deprecated command since release util-linux 2.13. Use
-.BR "uname -m"
+is a deprecated command since util-linux 2.13.  Use
+.B "uname -m"
 or use
-.BR arch
-from the coreutils package.
+.B arch
+from the GNU coreutils package.
 
 On current Linux systems,
 .B arch
