--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -1,6 +1,6 @@
 .\" Copyright 1993 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be distributed under the GNU General Public License
-.TH DMESG 1 "Jul 2011"
+.TH DMESG 1 "July 2011" "util-linux" "User Commands"
 .SH NAME
 dmesg \- print or control the kernel ring buffer
 .SH SYNOPSIS
