--- a/sys-utils/flock.1
+++ b/sys-utils/flock.1
@@ -24,9 +24,9 @@
 .\"   OTHER DEALINGS IN THE SOFTWARE.
 .\"
 .\" -----------------------------------------------------------------------
-.TH FLOCK "1" "4 Feb 2006" "flock utility" "H. Peter Anvin"
+.TH FLOCK 1 "February 2006" "util-linux" "User Commands"
 .SH NAME
-flock \- Manage locks from shell scripts
+flock \- manage locks from shell scripts
 .SH SYNOPSIS
 \fBflock\fP [\fB\-sxon\fP] [\fB\-w\fP \fItimeout\fP] \fIlockfile\fP [\fB\-c\fP] \fIcommand...\fP
 .PP
