--- a/sys-utils/fstrim.8
+++ b/sys-utils/fstrim.8
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH FSTRIM 8 "Nov 2010"
+.TH FSTRIM 8 "November 2010" "util-linux" "System Administration"
 .SH NAME
 fstrim \- discard unused blocks on a mounted filesystem
 .SH SYNOPSIS
