--- a/sys-utils/lscpu.1
+++ b/sys-utils/lscpu.1
@@ -1,9 +1,9 @@
 .\" Process this file with
 .\" groff -man -Tascii lscpu.1
 .\"
-.TH LSCPU 1 "February 2011" Linux "User Manuals"
+.TH LSCPU 1 "February 2011" "util-linux" "User Commands"
 .SH NAME
-lscpu \- CPU architecture information helper
+lscpu \- display information on CPU architecture
 .SH SYNOPSIS
 .B lscpu
 .RB [ \-hpx ]
