--- a/sys-utils/mountpoint.1
+++ b/sys-utils/mountpoint.1
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH MOUNTPOINT 1 "June 2011"
+.TH MOUNTPOINT 1 "June 2011" "util-linux" "User Commands"
 .SH NAME
 mountpoint \- see if a directory is a mountpoint
 .SH SYNOPSIS
