--- a/sys-utils/renice.1
+++ b/sys-utils/renice.1
@@ -31,9 +31,9 @@
 .\"
 .\"     @(#)renice.8   8.1 (Berkeley) 6/9/93
 .\"
-.Dd June 9, 1993
+.Dd November 2010
 .Dt RENICE 1
-.Os BSD 4
+.Os util-linux
 .Sh NAME
 .Nm renice
 .Nd alter priority of running processes
