--- a/term-utils/mesg.1
+++ b/term-utils/mesg.1
@@ -36,7 +36,7 @@
 .\"
 .\"
 .\" "
-.TH MESG 1 "10 March 1995" "Linux 1.2" "Linux Programmer's Manual"
+.TH MESG 1 "April 2011" "util-linux" "User Commands"
 .SH NAME
 mesg \- display (do not display) messages from other users
 .SH SYNOPSIS
