--- a/term-utils/reset.1
+++ b/term-utils/reset.1
@@ -1,6 +1,6 @@
 .\" Copyright 1992 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be distributed under the GNU General Public License
-.TH RESET 1 "10 October 1993" "Linux 0.99" "Linux Programmer's Manual"
+.TH RESET 1 "October 1993" "util-linux" "User Commands"
 .SH NAME
 reset \- reset the terminal
 .SH SYNOPSIS
