--- a/term-utils/script.1
+++ b/term-utils/script.1
@@ -31,9 +31,9 @@
 .\"
 .\"	@(#)script.1	6.5 (Berkeley) 7/27/91
 .\"
-.Dd Feb 20, 2011
+.Dd February 2011
 .Dt SCRIPT 1
-.Os Linux
+.Os util-linux
 .Sh NAME
 .Nm script
 .Nd make typescript of terminal session
