--- a/term-utils/scriptreplay.1
+++ b/term-utils/scriptreplay.1
@@ -138,7 +138,7 @@
 .\" ======================================================================
 .\"
 .IX Title "REPLAY 1"
-.TH REPLAY 1 "perl v5.6.0" "2001-09-03" "User Contributed Perl Documentation"
+.TH REPLAY 1 "September 2001" "util-linux" "User Commands"
 .UC
 .SH "NAME"
 scriptreplay \- play back typescripts, using timing information
