--- a/term-utils/setterm.1
+++ b/term-utils/setterm.1
@@ -8,7 +8,7 @@
 .\" Undocumented: -snow, -softscroll, -standout; these are
 .\" commented out in the source
 .\"
-.TH SETTERM 1 "7 January 2000" "Util-Linux 2.10" "Linux Programmer's Manual"
+.TH SETTERM 1 "January 2000" "util-linux" "User Commands"
 .SH NAME
 setterm \- set terminal attributes
 .SH SYNOPSIS
