--- a/term-utils/wall.1
+++ b/term-utils/wall.1
@@ -33,9 +33,9 @@
 .\"
 .\" Modified for Linux, Mon Mar  8 18:07:38 1993, faith@cs.unc.edu
 .\"
-.Dd March 8, 1993
+.Dd April 2011
 .Dt WALL 1
-.Os "Linux 0.99"
+.Os util-linux
 .Sh NAME
 .Nm wall
 .Nd write a message to users
