--- a/term-utils/write.1
+++ b/term-utils/write.1
@@ -36,7 +36,7 @@
 .\"
 .\" Modified for Linux, Sun Mar 12 10:21:01 1995, faith@cs.unc.edu
 .\"
-.TH WRITE 1 "12 March 1995" "" "Linux Programmer's Manual"
+.TH WRITE 1 "March 1995" "util-linux" "User Commands"
 .SH NAME
 write \- send a message to another user
 .SH SYNOPSIS
