--- a/text-utils/col.1
+++ b/text-utils/col.1
@@ -34,9 +34,9 @@
 .\"
 .\"     @(#)col.1	6.8 (Berkeley) 6/17/91
 .\"
-.Dd June 17, 1991
+.Dd May 2011
 .Dt COL 1
-.Os
+.Os util-linux
 .Sh NAME
 .Nm col
 .Nd filter reverse line feeds from input
