--- a/text-utils/colcrt.1
+++ b/text-utils/colcrt.1
@@ -31,9 +31,9 @@
 .\"
 .\"     @(#)colcrt.1	8.1 (Berkeley) 6/30/93
 .\"
-.Dd June 30, 1993
+.Dd May 2011
 .Dt COLCRT 1
-.Os BSD 3
+.Os util-linux
 .Sh NAME
 .Nm colcrt
 .Nd filter nroff output for CRT previewing
