--- a/text-utils/colrm.1
+++ b/text-utils/colrm.1
@@ -31,9 +31,9 @@
 .\"
 .\"     @(#)colrm.1	6.6 (Berkeley) 3/14/91
 .\"
-.Dd March 14, 1991
+.Dd May 2011
 .Dt COLRM 1
-.Os BSD 3
+.Os util-linux
 .Sh NAME
 .Nm colrm
 .Nd remove columns from a file
