--- a/text-utils/column.1
+++ b/text-utils/column.1
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)column.1	8.1 (Berkeley) 6/6/93
 .\"
-.TH COLUMN 1 "Local"
+.TH COLUMN 1 "October 2010" "util-linux" "User Commands"
 .SH NAME
 column - columnate lists
 .SH SYNOPSIS
@@ -39,9 +39,11 @@ column - columnate lists
 .RI [ options ]
 .IR file ...
 .SH DESCRIPTION
-The column utility formats its input into multiple columns. Rows
-are filled before columns. Input is taken from file or, by
-default, from the standard input. Empty lines are ignored.
+The
+.B column
+utility formats its input into multiple columns.  Rows
+are filled before columns.  Input is taken from \fIfile\fR or, by
+default, from standard input.  Empty lines are ignored.
 .PP
 .SH OPTIONS
 .IP "\fB\-c, \-\-columns\fP \fIwidth\fP"
