--- a/text-utils/more.1
+++ b/text-utils/more.1
@@ -37,9 +37,9 @@
 .\" conform with the more 5.19 currently in use by the Linux community.
 .\"
 .\" .Dd July 29, 1991 (Modified December 25, 1992)
-.Dd December 25, 1992
+.Dd February 2011
 .Dt MORE 1
-.Os "Linux 0.98"
+.Os util-linux
 .Sh NAME
 .Nm more
 .Nd file perusal filter for crt viewing
