--- a/text-utils/pg.1
+++ b/text-utils/pg.1
@@ -1,5 +1,5 @@
 .\" @(#)pg.1	1.7 (gritter) 4/25/01
-.TH PG 1 "2001-04-25" "Gunnar Ritter" "User Commands"
+.TH PG 1 "April 2001" "util-linux" "User Commands"
 .SH NAME
 pg \- browse pagewise through text files
 .SH SYNOPSIS
@@ -12,7 +12,7 @@ pg \- browse pagewise through text files
 .RB [ +/\fIpattern\fP/ ]
 .RI [ file ...]
 .SH DESCRIPTION
-.I Pg
+.B pg
 displays a text file on a
 .SM CRT
 one screenful at once.
