--- a/text-utils/rev.1
+++ b/text-utils/rev.1
@@ -33,9 +33,9 @@
 .\"     Modified for Linux by Charles Hannum (mycroft@gnu.ai.mit.edu)
 .\"                       and Brian Koehmstedt (bpk@gnu.ai.mit.edu)
 .\"
-.Dd March 21, 1992
+.Dd April 2011
 .Dt REV 1
-.Os
+.Os util-linux
 .Sh NAME
 .Nm rev
 .Nd reverse lines of a file or files
