--- a/text-utils/tailf.1
+++ b/text-utils/tailf.1
@@ -22,7 +22,7 @@
 .\" Formatted or processed versions of this manual, if unaccompanied by
 .\" the source, must acknowledge the copyright and authors of this work.
 .\" 
-.TH TAILF 1 "13 February 2003" "" "Linux Programmer's Manual"
+.TH TAILF 1 "February 2003" "util-linux" "User Commands"
 .SH NAME
 tailf \- follow the growth of a log file
 .SH SYNOPSIS
