--- a/text-utils/ul.1
+++ b/text-utils/ul.1
@@ -31,9 +31,9 @@
 .\"
 .\"     @(#)ul.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd June 6, 1993
+.Dd August 2011
 .Dt UL 1
-.Os BSD 4
+.Os util-linux
 .Sh NAME
 .Nm ul
 .Nd do underlining
