--- a/disk-utils/mkswap.8
+++ b/disk-utils/mkswap.8
@@ -3,7 +3,7 @@
 .\" May be distributed under the GNU General Public License
 .\" Rewritten for 2.1.117, aeb, 981010.
 .\"
-.TH MKSWAP 8 "13 March 2009" "Linux" "Linux Programmer's Manual"
+.TH MKSWAP 8 "March 2009" "util-linux" "System Administration"
 .SH NAME
 mkswap \- set up a Linux swap area
 .SH SYNOPSIS
