--- a/libblkid/libblkid.3
+++ b/libblkid/libblkid.3
@@ -5,7 +5,7 @@
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
 .\" Created  Wed Sep 14 12:02:12 2001, Andreas Dilger
-.TH LIBBLKID 3 "May 2009" "util-linux"
+.TH LIBBLKID 3 "May 2009" "util-linux" "Programmer's Manual"
 .SH NAME
 libblkid \- block device identification library
 .SH SYNOPSIS
