--- a/login-utils/chsh.1
+++ b/login-utils/chsh.1
@@ -10,7 +10,7 @@
 .\"  $Revision: 1.1 $
 .\"  $Date: 1995/03/12 01:28:58 $
 .\"
-.TH CHSH 1 "7 October 1998" "chsh" "Linux Reference Manual"
+.TH CHSH 1 "July 2009" "util-linux" "User Commands"
 .SH NAME
 chsh \- change your login shell
 .SH SYNOPSIS
