--- a/misc-utils/findmnt.8
+++ b/misc-utils/findmnt.8
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH FINDMNT 8 "Apr 2010" "Version 1.0"
+.TH FINDMNT 8 "April 2010" "util-linux" "System Administration"
 .SH NAME
 findmnt \- find a filesystem
 .SH SYNOPSIS
