--- a/misc-utils/look.1
+++ b/misc-utils/look.1
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)look.1	8.1 (Berkeley) 6/14/93
 .\"
-.TH LOOK "1" "June 2011" "util-linux" "User Commands"
+.TH LOOK 1 "June 2011" "util-linux" "User Commands"
 .SH NAME
 look \- display lines beginning with a given string
 .SH SYNOPSIS
