--- a/misc-utils/lsblk.8
+++ b/misc-utils/lsblk.8
@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH LSBLK 8 "Apr 2010" "Version 1.0"
+.TH LSBLK 8 "April 2010" "util-linux" "System Administration"
 .SH NAME
 lsblk \- list block devices
 .SH SYNOPSIS
