--- a/text-utils/hexdump.1
+++ b/text-utils/hexdump.1
@@ -31,9 +31,9 @@
 .\"
 .\"	from: @(#)hexdump.1	8.2 (Berkeley) 4/18/94
 .\"
-.Dd April 18, 1994
+.Dd July 2009
 .Dt HEXDUMP 1
-.Os
+.Os util-linux
 .Sh NAME
 .Nm hexdump
 .Nd ascii, decimal, hexadecimal, octal dump
