--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -7,7 +7,7 @@
 uuidd \- UUID generation daemon
 .SH SYNOPSIS
 .B uuidd
-[\fIoptions\fR]
+.RI [ options ]
 .SH DESCRIPTION
 The
 .B uuidd
@@ -17,65 +17,65 @@ in a secure and guaranteed-unique fashion, even in the face of large
 numbers of threads running on different CPUs trying to grab UUIDs.
 .SH OPTIONS
 .TP
-\fB\-p\fR, \fB\-\-pid\fR=\fIPATH\fR
+.BR \-p , " \-\-pid " \fIpath\fR
 Specify the pathname where the pid file should be written.  By default,
 the pid file is written to /var/run/uuidd/uuidd.pid.
 .TP
-\fB\-s\fR, \fB\-\-socket\fR=\fIPATH\fR
+.BR \-s , " \-\-socket " \fIpath\fR
 Specify the pathname used for the unix-domain socket used by uuidd.  By
 default, the pathname used is /var/run/uuidd/request.  This is primarily
 for debugging purposes, since the pathname is hard-coded in the libuuid
 library.
 .TP
-\fB\-T\fR, \fB\-\-timeout\fR=\fISEC\fR
+.BR \-T , " \-\-timeout " \fItimeout\fR
 Specify a timeout for uuidd.  If specified, then uuidd will exit after
+.I timeout
+seconds of inactivity.
 .TP
-\fB\-k\fR, \fB\-\-kill\fR
+.BR \-k , " \-\-kill "
 If currently a uuidd daemon is running, kill it.
 .TP
-\fB\-r\fR, \fB\-\-random\fR
+.BR \-r , " \-\-random "
 Test uuidd by trying to connect to a running uuidd daemon and
 request it to return a random-based UUID.
 .TP
-\fB\-t\fR, \fB\-\-time\fR
+.BR \-t , " \-\-time "
 Test uuidd by trying to connect to a running uuidd daemon and
 request it to return a time-based UUID.
 .TP
-\fB\-n\fR, \fB\-\-uuids\fR=\fINUM\fR
+.BR \-n , " \-\-uuids " \fInumber\fR
 When issuing a test request to a running uuidd, request a bulk response
 of
 .I number
 UUIDs.
 .TP
 .B \-d
-Run
-.B uuidd
-in debugging mode.  This prevents uuidd from running as a daemon.
+Run uuidd in debugging mode.  This prevents uuidd from running as a daemon.
 .TP
 .BI \-q
 Suppress some failure messages.
-.I timeout
-seconds of inactivity.
 .TP
-\fB\-V\fR, \fB\-\-version\fR
+.BR \-V , " \-\-version "
 Output version information and exit.
 .TP
-\fB\-h\fR, \fB\-\-help\fR
+.BR \-h , " \-\-help "
 Display help screen and exit.
 .SH EXAMPLE
-Start up a daemon, print few keys and at the end stop the daemon.
+Start up a daemon, print 42 random keys, and then stop the daemon.
 .PP
+.RS
 .nf
 uuidd -p /tmp/uuidd.pid -s /tmp/uuidd.socket
 uuidd -d -r -n 42 -s /tmp/uuidd.socket
 uuidd -d -k -s /tmp/uuidd.socket
 .nf
+.RE
 .SH AUTHOR
 The
 .B uuidd
 daemon was written by Theodore Ts'o <tytso@mit.edu>.
 .SH AVAILABILITY
-uuidd is part of the util-linux package and is available from
+The uuidd daemon is part of the util-linux package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux/.
 .SH "SEE ALSO"
 .BR uuid (3),
