docs: also uniformize headers and footers of troff-formatted man pages
Add two spaces as the required third argument of the date line to make
the specified date get used instead of today's date.  Incorporate the
section number into the page title, then use an empty section number,
so that specifying an explicit section/volume name will work.

Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/misc-utils/logger.1
+++ b/misc-utils/logger.1
@@ -33,8 +33,8 @@
 .\"
 .\" Section on valid facility and level strings added by
 .\" and1000@debian.org, 26 Oct 1997.
-.Dd August 2011
-.Dt LOGGER 1
+.Dd August 2011 "  "
+.Dt LOGGER(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm logger
