--- a/term-utils/script.1
+++ b/term-utils/script.1
@@ -31,8 +31,8 @@
 .\"
 .\"	@(#)script.1	6.5 (Berkeley) 7/27/91
 .\"
-.Dd February 2011
-.Dt SCRIPT 1
+.Dd February 2011 "  "
+.Dt SCRIPT(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm script
