--- a/text-utils/col.1
+++ b/text-utils/col.1
@@ -34,8 +34,8 @@
 .\"
 .\"     @(#)col.1	6.8 (Berkeley) 6/17/91
 .\"
-.Dd May 2011
-.Dt COL 1
+.Dd May 2011 "  "
+.Dt COL(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm col
