--- a/text-utils/colcrt.1
+++ b/text-utils/colcrt.1
@@ -31,8 +31,8 @@
 .\"
 .\"     @(#)colcrt.1	8.1 (Berkeley) 6/30/93
 .\"
-.Dd May 2011
-.Dt COLCRT 1
+.Dd May 2011 "  "
+.Dt COLCRT(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm colcrt
