--- a/text-utils/colrm.1
+++ b/text-utils/colrm.1
@@ -31,8 +31,8 @@
 .\"
 .\"     @(#)colrm.1	6.6 (Berkeley) 3/14/91
 .\"
-.Dd May 2011
-.Dt COLRM 1
+.Dd May 2011 "  "
+.Dt COLRM(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm colrm
