--- a/text-utils/hexdump.1
+++ b/text-utils/hexdump.1
@@ -31,8 +31,8 @@
 .\"
 .\"	from: @(#)hexdump.1	8.2 (Berkeley) 4/18/94
 .\"
-.Dd July 2009
-.Dt HEXDUMP 1
+.Dd July 2009 "  "
+.Dt HEXDUMP(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm hexdump
