--- a/text-utils/ul.1
+++ b/text-utils/ul.1
@@ -31,8 +31,8 @@
 .\"
 .\"     @(#)ul.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd August 2011
-.Dt UL 1
+.Dd August 2011 "  "
+.Dt UL(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm ul
