--- a/sys-utils/renice.1
+++ b/sys-utils/renice.1
@@ -31,8 +31,8 @@
 .\"
 .\"     @(#)renice.8   8.1 (Berkeley) 6/9/93
 .\"
-.Dd November 2010
-.Dt RENICE 1
+.Dd November 2010 "  "
+.Dt RENICE(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm renice
