--- a/term-utils/wall.1
+++ b/term-utils/wall.1
@@ -33,8 +33,8 @@
 .\"
 .\" Modified for Linux, Mon Mar  8 18:07:38 1993, faith@cs.unc.edu
 .\"
-.Dd April 2011
-.Dt WALL 1
+.Dd April 2011 "  "
+.Dt WALL(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm wall
