--- a/text-utils/rev.1
+++ b/text-utils/rev.1
@@ -33,8 +33,8 @@
 .\"     Modified for Linux by Charles Hannum (mycroft@gnu.ai.mit.edu)
 .\"                       and Brian Koehmstedt (bpk@gnu.ai.mit.edu)
 .\"
-.Dd April 2011
-.Dt REV 1
+.Dd April 2011 "  "
+.Dt REV(1) "" "User Commands"
 .Os util-linux
 .Sh NAME
 .Nm rev
