--- a/text-utils/ul.1
+++ b/text-utils/ul.1
@@ -52,8 +52,8 @@ by the environment variable
 The
 .Pa terminfo
 database is read to determine the appropriate sequences for underlining.
-If the terminal is incapable of underlining, but is capable of
-a standout mode then that is used instead.
+If the terminal is incapable of underlining but is capable of
+a standout mode, then that is used instead.
 If the terminal can overstrike,
 or handles underlining automatically,
 .Nm ul
