--- a/text-utils/hexdump.1
+++ b/text-utils/hexdump.1
@@ -36,7 +36,7 @@
 .Os util-linux
 .Sh NAME
 .Nm hexdump
-.Nd ascii, decimal, hexadecimal, octal dump
+.Nd display file contents in ascii, decimal, hexadecimal, or octal
 .Sh SYNOPSIS
 .Nm
 .Op Fl bcCdovx
@@ -54,8 +54,10 @@
 .Ek
 .Ar file ...
 .Sh DESCRIPTION
-The hexdump utility is a filter which displays the specified files, or
-the standard input, if no files are specified, in a user specified
+The
+.Nm
+utility is a filter which displays the specified files, or
+standard input if no files are specified, in a user-specified
 format.
 .Pp
 The options are as follows:
@@ -63,22 +65,22 @@ The options are as follows:
 .It Fl b
 .Em One-byte octal display .
 Display the input offset in hexadecimal, followed by sixteen
-space-separated, three column, zero-filled, bytes of input data,
+space-separated, three-column, zero-filled bytes of input data,
 in octal, per line.
 .It Fl c
 .Em One-byte character display .
 Display the input offset in hexadecimal, followed by sixteen
-space-separated, three column, space-filled, characters of input
+space-separated, three-column, space-filled characters of input
 data per line.
 .It Fl C
 .Em Canonical hex+ASCII display .
 Display the input offset in hexadecimal, followed by sixteen
-space-separated, two column, hexadecimal bytes, followed by the
+space-separated, two-column, hexadecimal bytes, followed by the
 same sixteen bytes in %_p format enclosed in ``|'' characters.
 .It Fl d
 .Em Two-byte decimal display .
 Display the input offset in hexadecimal, followed by eight
-space-separated, five column, zero-filled, two-byte units
+space-separated, five-column, zero-filled, two-byte units
 of input data, in unsigned decimal, per line.
 .It Fl e Ar format_string
 Specify a format string to be used for displaying data.
@@ -94,7 +96,7 @@ bytes of input.
 .It Fl o
 .Em Two-byte octal display .
 Display the input offset in hexadecimal, followed by eight
-space-separated, six column, zero-filled, two byte quantities of
+space-separated, six-column, zero-filled, two-byte quantities of
 input data, in octal, per line.
 .It Fl s Ar offset
 Skip
@@ -129,18 +131,20 @@ respectively.
 .It Fl v
 The
 .Fl v
-option causes hexdump to display all input data.
+option causes
+.Nm
+to display all input data.
 Without the
 .Fl v
-option, any number of groups of output lines, which would be
+option, any number of groups of output lines which would be
 identical to the immediately preceding group of output lines (except
 for the input offsets), are replaced with a line comprised of a
 single asterisk.
 .It Fl x
 .Em Two-byte hexadecimal display .
-Display the input offset in hexadecimal, followed by eight, space
-separated, four column, zero-filled, two-byte quantities of input
-data, in hexadecimal, per line.
+Display the input offset in hexadecimal, followed by eight
+space-separated, four-column, zero-filled, two-byte quantities of
+input data, in hexadecimal, per line.
 .El
 .Pp
 For each input file,
@@ -206,7 +210,9 @@ described in the C standard are supported:
 .Ed
 .El
 .Pp
-Hexdump also supports the following additional conversion strings:
+The
+.Nm
+utility also supports the following additional conversion strings:
 .Bl -tag -width Fl
 .It Cm \&_a Ns Op Cm dox
 Display the input offset, cumulative across input files, of the
@@ -225,10 +231,10 @@ conversion string except that it is only performed
 once, when all of the input data has been processed.
 .It Cm \&_c
 Output characters in the default character set.
-Nonprinting characters are displayed in three character, zero-padded
+Nonprinting characters are displayed in three-character, zero-padded
 octal, except for those representable by standard escape notation
 (see above),
-which are displayed as two character strings.
+which are displayed as two-character strings.
 .It Cm _p
 Output characters in the default character set.
 Nonprinting characters are displayed as a single
@@ -278,8 +284,9 @@ not have a specified iteration count, have the iteration count
 incremented until the entire input block has been processed or there
 is not enough data remaining in the block to satisfy the format string.
 .Pp
-If, either as a result of user specification or hexdump modifying
-the iteration count as described above, an iteration count is
+If, either as a result of user specification or
+.Nm
+modifying the iteration count as described above, an iteration count is
 greater than one, no trailing whitespace characters are output
 during the last iteration.
 .Pp
