--- a/text-utils/rev.1
+++ b/text-utils/rev.1
@@ -47,9 +47,9 @@
 .Sh DESCRIPTION
 The
 .Nm rev
-utility copies the specified files to the standard output, reversing the
+utility copies the specified files to standard output, reversing the
 order of characters in every line.
-If no files are specified, the standard input is read.
+If no files are specified, standard input is read.
 .Bl -tag -width Ds
 .It Fl V, Fl Fl version
 Output version information and exit.
