look: adjust the formatting and some wording of the man page
Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/misc-utils/look.1
+++ b/misc-utils/look.1
@@ -36,20 +36,20 @@
 look \- display lines beginning with a given string
 .SH SYNOPSIS
 .B look
-[\fIoptions\fR] \fIstring \fR[\fIfile\fR]
+.RI [ options ] " string " [ file ]
 .SH DESCRIPTION
 The 
 .B look
 utility displays any lines in
 .I file
 which contain
-.I string
+.IR string .
 As
 .B look
 performs a binary search, the lines in
 .I file
-must be sorted (where sort(1) got the same options \-d and/or \-f
-that
+must be sorted (where sort(1) got the same options
+.BR "\-d " and/or " \-f " that
 .B look
 is invoked with).
 .PP
@@ -61,51 +61,55 @@ is used, only alphanumeric characters are compared and the case of
 alphabetic characters is ignored.
 .SH OPTIONS
 .TP
-\fB\-a\fR, \fB\-\-alternative\fR
-Use alternative dictionary file.
+.BR \-a , " \-\-alternative"
+Use the alternative dictionary file.
 .TP
-\fB\-d\fR, \fB\-\-alphanum\fR
-Dictionary character set and order, i.e. only alphanumeric characters are
-compared. (On by default if no file is specified).
+.BR \-d , " \-\-alphanum"
+Use normal dictionary character set and order, i.e. only alphanumeric characters
+are compared.  (This is on by default if no file is specified.)
 .TP
-\fB\-f\fR, \fB\-\-ignore\-case\fR
-Ignore the case of alphabetic characters. (On by default if no file is
-specified).
+.BR \-f , " \-\-ignore\-case"
+Ignore the case of alphabetic characters.  (This is on by default if no file is
+specified.)
 .TP
-\fB\-t\fR, \fB\-\-terminate\fR=\fIC\fR
+.BR \-t , " \-\-terminate " \fIcharacter\fR
 Specify a string termination character, i.e. only the characters
-in string up to and including the first occurrence of termchar
+in \fIstring\fR up to and including the first occurrence of \fIcharacter\fR
 are compared.
 .TP
-\fB\-V\fR, \fB\-\-version\fR
-Output version information and exit.
+.BR \-h , " \-\-help"
+Display help text and exit.
 .TP
-\fB\-h\fR, \fB\-\-help\fR
-Display help screen and exit.
+.BR \-V , " \-\-version"
+Output version information and exit.
 .PP
-The look utility exits 0 if one or more lines were found and displayed, 1 if
+The
+.B look
+utility exits 0 if one or more lines were found and displayed, 1 if
 no lines were found, and >1 if an error occurred.
 .SH EXAMPLE
+.RS
 .nf
 sort -d /etc/passwd -o /tmp/look.dict
 look -t: root:foobar /tmp/look.dict
 .nf
+.RE
 .SH FILES
 .IX Header "FILES"
 .IP "\fB/usr/share/dict/words\fR" 4
 the dictionary
 .IP "\fB/usr/share/dict/web2\fR" 4
-the alternate dictionary
+the alternative dictionary
 .SH "SEE ALSO"
 .BR grep (1),
 .BR sort (1)
 .SH COMPATIBILITY
 The original manual page stated that tabs and blank characters participated
-in comparisons when the alphanum option was specified. This was incorrect
+in comparisons when the alphanum option was specified.  This was incorrect,
 and the current man page matches the historic implementation.
 .SH HISTORY
 The
-look
+.B look
 utility appeared in Version 7 AT&T Unix.
 .SH AVAILABILITY
 The look command is part of the util-linux package and is available from
