--- a/schedutils/ionice.1
+++ b/schedutils/ionice.1
@@ -3,32 +3,33 @@
 ionice \- set or get process I/O scheduling class and priority
 .SH SYNOPSIS
 .B ionice
-[[ \fB\-c\fR
+.RB [ \-c
 .IR class ]
-.RB [ \fB-n\fR
+.RB [ \-n
 .IR level ]
-.RB [ \fB-t\fR ]]
-.BI \fB-p\fR
-PID
-.RI [ PID  ]...
+.RB [ \-t ]
+.B \-p
+.IR PID ...
 .br
 .B ionice
-.RB [ \fB-c\fR
+.RB [ \-c
 .IR class ]
-.RB [ \fB-n\fR
+.RB [ \-n
 .IR level ]
-.RB [ \fB-t\fR ]
-.IR COMMAND
-[ ARG ]...
+.RB [ \-t ]
+.IR "command " [ argument ...]
 .SH DESCRIPTION
 This program sets or gets the I/O scheduling class and priority for a program.
 If no arguments or just \fB\-p\fR is given, \fBionice\fR will query the current
 I/O scheduling class and priority for that process.
 
-If no class is given, then
-.I COMMAND
+When \fIcommand\fR is given,
+.B ionice
+will run this command with the given arguments.
+If no \fIclass\fR is specified, then
+.I command
 will be executed with the "best-effort" scheduling class.  The default
-priority argument is 4.
+priority level is 4.
 
 As of this writing, a process can be in one of three scheduling classes:
 .IP "\fBIdle\fP"
@@ -63,27 +64,28 @@ will receive on each scheduling window.  This scheduling class is not
 permitted for an ordinary (i.e., non-root) user.
 .SH OPTIONS
 .TP
-\fB\-c\fR, \fB\-\-class\fR \fICLASS\fR
-The scheduling class name or number; \fI0\fR for none, \fI1\fR for realtime, \fI2\fR for
-best-effort, \fI3\fR for idle.
+.BR \-c , " \-\-class " \fIclass\fR
+Specify the name or number of the scheduling class to use; \fI0\fR for none,
+\fI1\fR for realtime, \fI2\fR for best-effort, \fI3\fR for idle.
 .TP
-\fB\-n\fR, \fB\-\-classdata\fR \fINUM\fR
-The scheduling class data.  This defines the class data, if the class
-accepts an argument.  For realtime and best-effort, \fI0-7\fR is valid data.
+.BR \-n , " \-\-classdata " \fIlevel\fR
+Specify the scheduling class data.  This only has an effect if the class
+accepts an argument.  For realtime and best-effort, \fI0-7\fR are valid data
+(priority levels).
 .TP
-\fB\-p\fR, \fB\-\-pid\fR \fIPID\fR
-Pass in process PID(s) to view or change already running processes.  If this argument
-is not given, \fBionice\fP will run the listed program with the given parameters.
+.BR \-p , " \-\-pid " \fIPID\fR...
+Specify the process IDs of running processes for which to get or set the
+scheduling parameters.
 .TP
-\fB\-t\fR, \fB\-\-ignore\fR
-Ignore failure to set the requested priority.  If COMMAND or PID(s) is specified,
+.BR \-t , " \-\-ignore"
+Ignore failure to set the requested priority.  If \fIcommand\fR was specified,
 run it even in case it was not possible to set the desired scheduling priority,
 which can happen due to insufficient privileges or an old kernel version.
 .TP
-\fB\-h\fR, \fB\-\-help\fR
+.BR \-h , " \-\-help"
 Display help and exit.
 .TP
-\fB\-V\fR, \fB\-\-version\fR
+.BR \-V , " \-\-version"
 Display version information and exit.
 .SH EXAMPLES
 .LP
